packages/isar_community_generator/test/errors/class/mixin.dart
// only classes

import 'package:isar_community/isar_community.dart';

// ignore: invalid_annotation_target - annotation intentionally applied to mixin for testing error handling
@collection
mixin Test {}
